apres tabaski | commencement php

--- a/SUNUSHOP/src/app/apropos/apropos.component.html
+++ b/SUNUSHOP/src/app/apropos/apropos.component.html
@@ -14,7 +14,6 @@
 
 
 
-    <link rel="stylesheet" href="apropos.component.scss">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-xxxxxxx" crossorigin="anonymous" />
 	<link rel="stylesheet" href= "https://use.fontawesome.com/releases/v5.13.0/css/all.css">
@@ -70,10 +69,9 @@
     <h1 class="nous">Qui sommes-nous ?</h1>
     <section>
         <p class="diop">
-            La société SUNUSHOP a été fondée en 2020 sur la base de convictions et valeurs fortes avec 4 ans d’expérience. Sise sur 28 avenue Touba Mosquee en face BHS et au centre<br> 
-            &nbsp;&nbsp;&nbsp; commercial Serigne Fallou cantine N°107, elle est spécialisée dans la vente et prestation de services, proposant une large gamme de matériels informatiques, bureautiques, <br>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; électroniques, réseaux, diverses accessoires et dans tous les services liés aux TIC (Technologies de l’Information et de la Télécommunication).
-        </p>
+            La société SUNUSHOP a été fondée en 2020 sur la base de convictions et valeurs fortes avec 2 ans d’expérience. Sise sur avenue Mosquee CICES en face foire <br> 
+            &nbsp;&nbsp;&nbsp; commercial Serigne Fallou cantine N°107, elle est spécialisée dans la vente et le stock de produits, proposant une large gamme d'accessoires <br>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; sacs, chaussures   </p>
         <br>
 
     </section>
@@ -90,10 +88,10 @@
                 rester focalisé sur votre satisfaction et <br>
                 développer toujours plus de services dans<br>
                  le but de vous apporter une expérience <br>
-                 d’achat irréprochable Choisir JAG <br>
-                 Informatique, c’est non seulement <br>
-                s’évader vers le monde de l’innovation<br>
-                 technologique mais aussi donner un sens à<br> 
+                 d’achat irréprochable Choisir SUNUSHOP <br>
+                 , c’est non seulement <br>
+                s’évader vers le monde de la beaute et de l'elegance<br>
+                  mais aussi donner un sens à<br> 
                  vos achats ! <br>
             </div>
         </div>
@@ -121,8 +119,8 @@
                 <h4>Support 24h/7</h4>
             <p class="ssd">
                 Profitez d’un service après-vente 24h/24 et 7j/7 pour vous<br>
-                 accompagner dans l’installation et l’utilisation de vos<br>
-                  équipements avec un accueil prioritaire du lundi au samedi <br>
+                 accompagner dans l’achat et l’utilisation de vos<br>
+                  achats avec un accueil prioritaire du lundi au samedi <br>
                   de 8h à 20h.<br>
                   <br>
             </p>
@@ -140,8 +138,7 @@
         <div class="dame">
             <h3>Objectifs</h3>
             <p>
-                Faire de JAG Informatique le leader de la <br>
-                technologie au Sénégal et dans la sous<br>
+                Faire de SUNUSHOP le leader des accessoires au Sénégal et dans la sous<br>
                  région d’ici l’horizon 2035
                  <br>
                  <br>
@@ -164,15 +161,15 @@
             <div class="listete">
                 <h3>Services</h3>
                 <ul class="seck">
-                    <li>Dépannage</li>
-                    <li>Installation</li>
-                    <li>Vente de matériels informatiques</li>
+                    <li>Sacs</li>
+                    <li>Chaussures</li>
+                    <!-- <li>Vente de matériels informatiques</li>
                     <li>Installation internet</li>
                     <li>Câblage</li>
                     <li>Réseaux</li>
                     <li>Maintenance (préventive et curative)</li>
                     <li>Installation serveurs</li>
-                    <li>Mise à niveau logiciel</li>
+                    <li>Mise à niveau logiciel</li> -->
                 </ul>
             </div>
 
@@ -185,26 +182,25 @@
                 <div class="tailled">
                     <span class="calque"><i class="fa-solid fa-phone-flip"></i></span>
                    <span class="taille">
-                    Vous avez des questions? Appelez-nous au !<br>
-                    <span>33 978 06 93</span>
+                    <i class="fas fa-phone"></i>Vous avez des questions?Appelez-nous au !<span id="phone">33 420 10 20</span>
                    </span>
                 </div>
                 <div class="touba">
                 <p>Adresse</p>
-                <span>MEDINA soumbedioune</span><br>
-                <span>assane@html.com</span>
+                <span>EN FACE FOIRE</span><br>
+                <span>sunushop@gmail.com</span>
             </div>
             </div>
 
             <div class="rien">
                 <h3>CATEGORIES</h3>
-                <span class="rien23">Informatique</span><br>
-                <span class="rien23">Electronique</span><br>
-                <span class="rien23">Console | Jeu</span><br>
-                <span class="rien23">Accessoires</span><br>
+                <span class="rien23">Sacs</span><br>
+                <span class="rien23">Chaussures</span><br>
+                <!-- <span class="rien23">Console | Jeu</span><br>
+                <span class="rien23">Accessoires</span><br> -->
             </div>
 
-            <div class="rien1">
+            <div class="rien" id="rien">
                 <h3>MENU</h3>
                 <span>Qui sommes-nous ?</span><br>
                 <span>Liste de souhaits</span><br>
