--- a/SUNUSHOP/src/app/login/login.component.html
+++ b/SUNUSHOP/src/app/login/login.component.html
@@ -1,31 +1,34 @@
-<div class="forme-nav">
+<body>
+    
 
-    <div class="contenu-nav">
+    <div class="forme-nav">
 
-        <!-- <div (click)="redirecTo('login')" class="btn-all"> -->
-        <div class="btn-all">
-            Connexion
-        </div>
-        <div (click)="redirecTo('register')" class="btn-all">
-            Inscription
-        </div>
+        <div class="contenu-nav">
 
-
-    </div>
-</div>
-
+            <!-- <div (click)="redirecTo('login')" class="btn-all"> -->
+            <div class="btn-all">
+                Connexion
+            </div>
+            <div (click)="redirecTo('register')" class="btn-all">
+                Inscription
+            </div>
 
 
-<div class="container">
-    <h1>Se connecter</h1>
-    <div class="login-content">
-
-        <input type="text" [(ngModel)]="email" name="email" placeholder="Email">
-        <input type="password" [(ngModel)]="password" name="password" placeholder="Mot De Pass">
-
-        <div (click)="redirecToHome()" class="btn-all">
-            CONNEXION
         </div>
     </div>
-</div>
 
+
+
+    <div class="container">
+        <h1>Se connecter</h1>
+        <div class="login-content">
+
+            <input type="text" [(ngModel)]="email" name="email" placeholder="Email">
+            <input type="password" [(ngModel)]="password" name="password" placeholder="Mot De Pass">
+
+            <div (click)="redirecToHome()" class="btn-all">
+                CONNEXION
+            </div>
+        </div>
+    </div>
+</body>
