--- a/SUNUSHOP/src/app/login/login.component.scss
+++ b/SUNUSHOP/src/app/login/login.component.scss
@@ -1,13 +1,19 @@
 .forme-nav{
     width: 100%;
     display: flex;
+    background-color: black;
 }
 .contenu-nav{
     width: 100%;
     display: flex;
    
 }
-
+body{
+    background-color: black;
+    margin: 0;
+    top: 0;
+    margin-top: 0;
+}
 
 
 .container{
@@ -18,6 +24,12 @@
     align-items: center;
     justify-content: center;
     margin-top: -50px;
+    background-color: black;
+}
+.container h1{
+    color: rgb(227, 149, 162) ;
+    font-size: 2.4em;
+    
 }
 
 .login-content{
